refactor: Update Fuse.js import and Firebase Firestore update
The `fuse.js` package has been updated to `fuse`, and the import path in `index.html` has been adjusted accordingly. Additionally, the Firestore update logic in `App.tsx` has been simplified from `runTransaction` to `updateDoc`, and the `CustomerProfile.tsx` component now correctly uses the `setCustomers` function for filtering. The payment update logic in `CustomerProfile.tsx` has also been refined to handle payment dates and amounts more accurately when marking as paid or unpaid.

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,11 +4,11 @@
 [build]
   # Setting the build command to an empty string is crucial.
     # It tells Netlify: "Do not run 'npm install' or any other build script."
-      command = "npm run build"
+      command = ""
         
           # This tells Netlify that your website's files (like index.html)
             # are in the main root directory of your project.
-              publish = "dist"
+              publish = "."
 
               # This section sets the environment for the build process.
               [build.environment]
