--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "react-dom": "^19.2.0",
     "react": "^19.2.0",
-    "fuse.js": "^7.0.0",
+    "fuse": "7.0.0",
     "firebase": "^12.4.0"
   },
   "devDependencies": {
